--- a/public/style.css
+++ b/public/style.css
@@ -45,7 +45,7 @@ header#sign-in-header {
     padding-bottom: 2%;
 }
 
-form.signin-form {
+form#signin-form {
     margin: auto;
     width: 40%;
 }
@@ -54,11 +54,11 @@ form.signin-form {
 
 /*///////////Main and purpose section/////////////*/
 
-header.main-header {
+header#main-header {
     padding: 15% 0;
 }
 
-section.purpose-statement {
+section#purpose-statement {
     min-height: 200px;
     padding: 30px 0;
     background-color: lightgray;
@@ -80,5 +80,65 @@ section#sign-up {
     padding: 30px 0;
     background-color: darkgray;
 }
+
+/*miles submission form*/
+
+section:nth-child(5) {
+    padding-top: 5%;
+    background-color: white;
+}
+
+section#miles-total div {
+    min-height: 100px;
+    margin: auto;
+    width: 30%;
+    display: inline-block;
+    background-color: lightgray;
+}
+
+form#miles-form div {
+    margin: auto;
+    width: 30%;
+    display: inline-block;
+    border: none;
+}
+
+form input {
+    width: 70%;
+    border: 1px solid black;
+}
+
+form button:hover {
+    background-color: lightgray;
+}
+
+/*miles total table*/
+section:nth-child(7) {
+    padding-top: 5%;
+    background-color: lightgray;
+}
+
+table {
+    background-color: white;
+    margin: auto;
+    width: 60%;
+
+}
+
+table th {
+    font-size: 1.2em;
+    background-color: darkgray;
+}
+
+table tr {
+
+    height: 30px;
+    border: none;
+}
+
+table tr:hover {
+    background-color: darkgray;
+}
+
 
 
