--- a/public/user-input-page.css
+++ b/public/user-input-page.css
@@ -1,3 +1,4 @@
+/*
 * {
     margin: 0;
     border: 0;
@@ -45,9 +46,11 @@ section {
 header {
     padding-bottom: 5%
 }
+*/
 
 /*miles submission form*/
 
+/*
 section:nth-child(2) {
 padding-top: 5%;
 background-color: darkgray;
@@ -68,8 +71,10 @@ form input {
 form button:hover {
     background-color: lightgray;
 }
+*/
 
 /*miles total table*/
+/*
 section:nth-child(3) {
     padding-top: 5%;
     background-color: lightgray;
@@ -96,3 +101,4 @@ table tr {
 table tr:hover {
     background-color: darkgray;
 }
+*/
