--- a/public/style.css
+++ b/public/style.css
@@ -3,20 +3,22 @@
     border: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 body {
-    font-family: 'Cousine', monospace;
+    font-family: 'Roboto', sans-serif;
     font-size: 1em;
     color: #2c3531;
-    text-align: center;
     line-height: 1.5;
 }
 
+/*Lots of Nav stuff*/
 nav, footer {
-    padding: 3% 0;
-    background-color: black;
+    padding: 1.5% 0;
+    background-color: #262228;
     color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 nav {
@@ -25,23 +27,82 @@ nav {
     left: 0;
     right: 0;
     z-index: 10;
+    color: white;
 }
 
+ul {
+    width: 70%;
+    text-align: center;
+    display: inline-block;
+    margin:auto;
+}
+
+div#sign-in-buttons {
+    width: 20%;
+    display: inline-block;
+    margin:auto;
+}
+
+button#js-signin-link, #js-signout-link {
+    color: white;
+    letter-spacing: 1px;
+    background-color: #0375B4;
+    width: 90px;
+    padding: 10px;
+    border-radius: 10px;
+
+}
+
+button#js-signin-link:hover, #js-signout-link:hover {
+    background-color: #0394e2;
+}
+
+a {
+    padding: 0 15px 0 15px;
+    font-size: 1.1em;
+    color: white;
+}
+
+a:hover {
+    color: #0394e2;
+    text-decoration: none;
+}
+
+a#main-logo {
+    color: #ffce00;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.5em;
+}
+
+
+
+
+
+/*///////////Sign-in section/////////////*/
+
+h1, h2, h3, h4 {
+    font-family: 'Roboto Slab', serif;
+}
 
 header {
     padding: 5% 0;
+    font-family: 'Roboto Slab', serif;
+    text-align: center;
 }
 
-/*///////////Sign-in section/////////////*/
+section {
+    text-align: center;
+}
 
 section#sign-in-section{
     min-height: 200px;
     padding: 30px 0;
-    background-color: lightgray;
+    background-color: #0375B4;
+    color: white;
 }
 
 header#sign-in-header {
-    padding-top: 10%;
+    padding-top: 6%;
     padding-bottom: 2%;
 }
 
@@ -50,18 +111,52 @@ form#signin-form {
     width: 40%;
 }
 
+input#username, #password {
+    width: 30%;
+    padding-left: 10px;
+    border: none;
+    border-radius: 10px
+}
 
+button#js-signin-button {
+    color: #262228;
+    letter-spacing: 1px;
+    background-color: #ffce00;
+    width: 90px;
+    padding: 5px;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+button#js-signin-button:hover {
+    background-color: #ffe066;
+}
 
 /*///////////Main and purpose section/////////////*/
 
-header#main-header {
-    padding: 15% 0;
+section#main-header {
+    padding: 5% 0;
+    background-image: url("/commute-calculator-final-capstone/images/co2mmuteSectionImg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #0375B4;
+   background-attachment: fixed;
+
+}
+
+header#page-title {
+    color: #2c3531;
+    font-size: 3.5em;
+
 }
 
 section#purpose-statement {
     min-height: 200px;
     padding: 30px 0;
-    background-color: lightgray;
+    background-color: #2c3531;
+    color: #00995e;
 }
 
 p {
@@ -78,7 +173,8 @@ p + p {
 section#sign-up {
     min-height: 200px;
     padding: 30px 0;
-    background-color: darkgray;
+    background-color: #2c3531;
+    color:
 }
 
 /*miles submission form*/
