--- a/images/Co2mmute Calculator landing page_files/style.css
+++ b/images/Co2mmute Calculator landing page_files/style.css
@@ -227,22 +227,19 @@ section:nth-child(1) {
     padding-bottom: 5%;
     background-color: #0375b4;
     color: lightgray;
-
+    
 }
 
 section#miles-total div {
+    min-height: 100px;
     margin: auto;
     width: 30%;
     display: inline-block;
-    background-color: #fff5cc;
-    border-radius: 50%;
-    color: #c64448;
-    padding: 30px;
+    background-color: lightgray;
+    border-radius: 5px;
+    color: #c64448
 }
 
-section#miles-total div img {
-    width: 90%;
-}
 
 
 form#miles-form div {
@@ -278,9 +275,10 @@ input#date, #miles{
 }
 
 button#convert-button {
-    color: #2c3531;
+    color: #262228;
     letter-spacing: 1px;
-    background-color: #ffce00;
+    background-color: #0375b4;
+    color: white;
     width: 90px;
     padding: 10px;
     border-radius: 10px;
@@ -289,30 +287,27 @@ button#convert-button {
     font-size: 1em;
 }
 
-button#convert-button:hover {
-    background-color: #ffe066;
+button#js-signup-button:hover {
+    background-color: #0394e2;
 }
 
 
 /*miles total table*/
 section:nth-child(3) {
     padding-top: 5%;
-    padding-bottom: 15%;
-    background-color: #2c3531;
-    color: white;
+    background-color: lightgray;
 }
 
 table {
     background-color: white;
     margin: auto;
     width: 60%;
-    color: #2c3531;
 
 }
 
 table th {
     font-size: 1.2em;
-    background-color: #c64448;
+    background-color: darkgray;
 }
 
 table tr {
@@ -322,7 +317,7 @@ table tr {
 }
 
 table tr:hover {
-    background-color: #c64448;
+    background-color: darkgray;
 }
 
 
