updated visuals in section and started media queries

--- a/public/style.css
+++ b/public/style.css
@@ -85,7 +85,7 @@ h1, h2, h3, h4 {
 }
 
 header {
-    padding: 5% 0;
+    padding: 2% 0;
     font-family: 'Roboto Slab', serif;
     text-align: center;
 }
@@ -139,7 +139,7 @@ button#js-signin-button:hover {
 section#main-header {
     padding: 5% 0 0 0;
     background-image: url("/images/co2mmuteSectionImg.jpg");
-    background-position: center bottom 100px;
+    background-position: center bottom 200px;
     background-repeat: no-repeat;
     background-color: #0375B4;
    background-attachment: fixed;
@@ -152,33 +152,73 @@ header#page-title {
 
 }
 
+/*Purpose section*/
+
 section#purpose-statement {
     min-height: 200px;
-    padding: 30px 0;
-    background-color: #2c3531;
-    color: #00995e;
+    padding: 50px 0;
+    background-color: #fff;
+    color: #000;
+    background-image: url("/images/tree-section.png");
+    background-position: center top 50px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
+h1#purpose-header{
+    width: 20%;
+    color: #000;
+    display: inline-block;
+    text-align: right;
+    vertical-align: top;
 }
 
 div#site-description {
     width: 45%;
-    margin: auto;
+    margin: 0 auto 50px auto;
     display: inline-block;
+
 }
-p {
+
+p#about-one {
     margin: 0 auto;
-    max-width: 650px;
+    max-width: 600px;
     font-size: 1.5em;
+    text-align: left;
+    padding-left: 50px;
 }
 
 div#site-infographic {
-    width: 50%;
+    width: 60%;
     margin: auto;
-    display: inline-block;
+
 }
 
 img#infographic {
-    width: 75%;
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: auto;
 }
+
+div#how-it-works{
+    margin-top: 100px;
+    width: 30%;
+    display: inline-block;
+    font-size: 1.5em;
+    text-align: left;
+}
+
+div#submit-screen {
+    display:inline-block;
+    width: 60%;
+}
+
+div#submit-screen img {
+    width: 80%;
+    vertical-align: middle;
+}
+
 
 
 /*///////////Sign-up section/////////////*/
@@ -192,12 +232,15 @@ section#sign-up {
     line-height: 2.0em;
 }
 
-
+label {
+    width: 15%;
+}
 input#signup-username, #signup-password, #confirm-password {
     width: 30%;
     padding-left: 10px;
     border: none;
     border-radius: 10px;
+
 
 }
 
@@ -227,28 +270,40 @@ section:nth-child(1) {
     padding-bottom: 5%;
     background-color: #0375b4;
     color: lightgray;
+    background-image: url("/images/co2mmute-calculation-section.png");
+    background-position: center top 50px;
+    background-repeat: cover;
+    background-attachment: fixed;
 
 }
 
+
 section#miles-total div {
     margin: auto;
-    width: 30%;
+    width: 25%;
     display: inline-block;
-    background-color: #fff5cc;
-    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 20%;
     color: #c64448;
     padding: 30px;
 }
 
+section#miles-total div div.card-name {
+    width: 70%;
+    margin: auto;
+    background: none;
+    font-size: 2.0rem;
+    line-height: 0.1rem
+
+}
 section#miles-total div img {
-    width: 90%;
+    width: 80%;
 }
 
 
 form#miles-form div {
     margin: auto;
     width: 30%;
-    display: inline-block;
     border: none;
 }
 
@@ -260,9 +315,15 @@ section:nth-child(2) {
     background-color: #00995e;
 }
 
+form label {
+    font-size: 1.4rem;
+    line-height: 2rem;
+}
+
 form input {
     width: 70%;
     border: 1px solid black;
+    line-height: 2rem;
 }
 
 form button:hover {
@@ -300,6 +361,12 @@ section:nth-child(3) {
     padding-bottom: 15%;
     background-color: #2c3531;
     color: white;
+    background-image: url("/images/bike-section.png");
+    background-position: center left -30px;
+    background-attachment: fixed;
+
+
+
 }
 
 table {
@@ -323,6 +390,119 @@ table tr {
 
 table tr:hover {
     background-color: #c64448;
+}
+
+/* Media Query*/
+
+@media only screen and (max-width: 800px) {
+    /*Purpose section*/
+
+    div#site-description {
+        width: 45%;
+        margin: 0 auto 50px auto;
+        display: inline-block;
+
+    }
+
+    p#about-one {
+        margin: 0 auto;
+        max-width: 650px;
+        font-size: 1.5em;
+        text-align: left;
+        padding-left: 50px;
+    }
+
+    div#site-infographic {
+        width: 60%;
+        margin: auto;
+
+    }
+
+    img#infographic {
+        width: 100%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        margin: auto;
+    }
+
+    div#how-it-works{
+        margin-top: 100px;
+        width: 30%;
+        display: inline-block;
+        font-size: 1.5em;
+        text-align: left;
+    }
+
+    div#submit-screen {
+        display:inline-block;
+        width: 60%;
+    }
+
+    div#submit-screen img {
+        width: 80%;
+        margin: 40px;
+    }
+}
+
+
+@media only screen and (max-width: 640px) {
+
+}
+
+
+@media only screen and (max-width: 480px) {
+
+    /*Lots of Nav stuff*/
+    nav, footer {
+        padding: 1.5% 0;
+        background-color: #262228;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+    }
+
+    ul {
+        display: block;
+    }
+
+    /*///////////Sign-in section/////////////*/
+   section#sign-in-section{
+        min-height: 100px;
+        padding: 30px 0;
+    }
+
+
+    header#sign-in-header {
+        padding-top: 6%;
+        padding-bottom: 2%;
+    }
+
+    form#signin-form {
+        margin: auto;
+        width: 70%;
+    }
+
+    input#username, #password {
+        width: 60%;
+        padding-left: 10px;
+        border: none;
+        border-radius: 10px
+    }
+
+    button#js-signin-button {
+        color: #262228;
+        letter-spacing: 1px;
+        background-color: #ffce00;
+        width: 90px;
+        padding: 5px;
+        border-radius: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+
+    }
+
+    button#js-signin-button:hover {
+        background-color: #ffe066;
+    }
+
 }
 
 
