--- a/public/style.css
+++ b/public/style.css
@@ -3,19 +3,53 @@
     border: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+a {
+    padding: 0 15px 0 15px;
+    font-size: 1.1em;
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #0394e2;
+    text-decoration: none;
+}
+
+main {
+    margin: auto;
+    width: 100%;
+}
+
+main.wrapper {
+    min-height: 100%;
+}
+
+section {
+    height: 100%;
+    text-align: center;
     font-family: 'Roboto', sans-serif;
-    font-size: 1em;
-    color: #2c3531;
-    line-height: 1.5;
+}
+
+header {
+    padding: 1% 0;
+    font-family: 'Roboto Slab', serif;
+    text-align: center;
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Roboto Slab', serif;
 }
 
 /*Lots of Nav stuff*/
 nav, footer {
-    padding: 1.5% 0;
+    padding: 1% 0;
     background-color: #262228;
     color: white;
     font-family: 'Roboto', sans-serif;
@@ -30,17 +64,35 @@ nav {
     color: white;
 }
 
-ul {
-    width: 70%;
-    text-align: center;
+div#nav-logo {
+    width: 40%;
+    text-align: right;
     display: inline-block;
-    margin:auto;
+    margin: auto;
+}
+
+a#main-logo {
+    color: #ffce00;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.5em;
+}
+
+a#main-logo sub {
+    color: #ffce00;
+    font-family: 'Roboto Slab', serif;
+}
+
+div#nav-links {
+    width: 30%;
+    text-align: left;
+    display: inline-block;
+    margin: auto;
 }
 
 div#sign-in-buttons {
     width: 20%;
     display: inline-block;
-    margin:auto;
+    margin: auto;
 }
 
 button#js-signin-link, #js-signout-link {
@@ -50,56 +102,28 @@ button#js-signin-link, #js-signout-link {
     width: 90px;
     padding: 10px;
     border-radius: 10px;
-
+    font-size: 1em;
+    font-family: 'Roboto', sans-serif;
 }
 
 button#js-signin-link:hover, #js-signout-link:hover {
     background-color: #0394e2;
 }
 
-a {
-    padding: 0 15px 0 15px;
-    font-size: 1.1em;
-    color: white;
-}
-
-a:hover {
-    color: #0394e2;
-    text-decoration: none;
-}
-
-a#main-logo {
-    color: #ffce00;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.5em;
-}
-
-/*///////////Sign-in section/////////////*/
-
-h1, h2, h3, h4 {
-    font-family: 'Roboto Slab', serif;
-}
-
-header {
-    padding: 2% 0;
-    font-family: 'Roboto Slab', serif;
-    text-align: center;
-}
-
-section {
-    text-align: center;
-}
-
-section#sign-in-section{
-    min-height: 200px;
+/*Sign-in section*/
+section#sign-in-section {
     padding: 30px 0;
     background-color: #0375B4;
-    color: white;
 }
 
 header#sign-in-header {
+    color: white;
     padding-top: 6%;
     padding-bottom: 2%;
+}
+
+header#sign-in-header sub {
+    color: white;
 }
 
 form#signin-form {
@@ -108,16 +132,20 @@ form#signin-form {
 }
 
 label#signin-label, #password-label {
-    font-size: 1.2rem;
+    font-size: 1em;
     width: 22%;
     margin: auto;
+    color: white;
 }
 
 input#username, #password {
     width: 30%;
     padding-left: 10px;
     border: none;
-    border-radius: 10px
+    border-radius: 10px;
+    margin: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
 }
 
 button#js-signin-button {
@@ -125,43 +153,43 @@ button#js-signin-button {
     letter-spacing: 1px;
     background-color: #ffce00;
     width: 90px;
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-
+    font-size: 1em;
 }
 
 button#js-signin-button:hover {
     background-color: #ffe066;
 }
 
-/*///////////Main and purpose section/////////////*/
+/*Main and purpose section*/
 
 section#main-header {
     padding: 5% 0 0 0;
     background-image: url("/images/co2mmuteSectionImg.jpg");
-    background-position: center bottom 200px;
+    background-size: 150%;
+    background-position: center top 200px;
     background-repeat: no-repeat;
     background-color: #0375B4;
-   background-attachment: fixed;
-
+    background-attachment: fixed;
 }
 
 header#page-title {
+    font-family: 'Roboto Slab', serif;
     color: #2c3531;
     font-size: 3.5em;
-
 }
 
 /*Purpose section*/
 
 section#purpose-statement {
-    min-height: 200px;
     padding: 50px 0;
     background-color: #fff;
     color: #000;
     background-image: url("/images/tree-section.png");
+    background-size: 115%;
     background-position: center top 50px;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -169,11 +197,12 @@ section#purpose-statement {
 
 
 h1#purpose-header{
-    width: 20%;
-    color: #000;
+    width: 15%;
+    color: #262228;
     display: inline-block;
     text-align: right;
-    vertical-align: top;
+    vertical-align: text-bottom;
+    margin: 0;
 }
 
 div#site-description {
@@ -186,7 +215,7 @@ div#site-description {
 p#about-one {
     margin: 0 auto;
     max-width: 600px;
-    font-size: 1.5em;
+    font-size: 1.4em;
     text-align: left;
     padding-left: 50px;
 }
@@ -203,11 +232,10 @@ img#infographic {
     margin: auto;
 }
 
-
 div#how-it-works{
     width: 25%;
     display: inline-block;
-    font-size: 1.5em;
+    font-size: 1.4em;
     text-align: left;
     margin: 100px auto;
 }
@@ -225,27 +253,27 @@ div#submit-screen img {
 }
 
 
-/*///////////Sign-up section/////////////*/
+/*Sign-up section*/
 
 section#sign-up {
-    min-height: 200px;
     padding: 30px 0;
     background-color: #ffce00;
     color: #2c3531;
-    font-size: 1.1em;
-    line-height: 2.0em;
+    font-size: 1em;
+    line-height: 3em;
 }
 
-label {
-    width: 15%;
+label#label-username, #label-password, #label-repassword {
+    font-size: 1.2em;
 }
+
 input#signup-username, #signup-password, #confirm-password {
     width: 30%;
     padding-left: 10px;
     border: none;
     border-radius: 10px;
-
-
+    font-family: 'Roboto', serif;
+    font-size: 1em;
 }
 
 button#js-signup-button {
@@ -253,7 +281,7 @@ button#js-signup-button {
     letter-spacing: 1px;
     background-color: #0375b4;
     color: white;
-    width: 90px;
+    width: 100px;
     padding: 10px;
     border-radius: 10px;
     margin-top: 10px;
@@ -265,22 +293,19 @@ button#js-signup-button:hover {
     background-color: #0394e2;
 }
 
-
-
 /*miles submission form*/
 
 section:nth-child(1) {
     padding-top: 5%;
     padding-bottom: 5%;
     background-color: #0375b4;
-    color: lightgray;
+    color: white;
     background-image: url("/images/co2mmute-calculation-section.png");
-    background-position: center top 50px;
-    background-repeat: cover;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-
 }
-
 
 section#miles-total div {
     margin: auto;
@@ -293,17 +318,20 @@ section#miles-total div {
 }
 
 section#miles-total div div.card-name {
-    width: 70%;
-    margin: auto;
+    width: 100%;
     background: none;
-    font-size: 2.0rem;
-    line-height: 0.1rem
-
+    font-size: 1.5em;
+    line-height: 1em;
+    text-align: center;
 }
+
+p.mpg {
+    color: #262228;
+}
+
 section#miles-total div img {
     width: 80%;
 }
-
 
 form#miles-form div {
     margin: auto;
@@ -320,14 +348,15 @@ section:nth-child(2) {
 }
 
 form label {
-    font-size: 1.4rem;
-    line-height: 2rem;
+    font-size: 1.2em;
+    line-height: 2em;
 }
 
 form input {
     width: 70%;
     border: 1px solid black;
-    line-height: 2rem;
+    line-height: 2em;
+    font-family: 'Roboto', serif;
 }
 
 form button:hover {
@@ -339,7 +368,6 @@ input#date, #miles{
     padding-left: 10px;
     border: none;
     border-radius: 10px;
-
 }
 
 button#convert-button {
@@ -352,6 +380,7 @@ button#convert-button {
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 1em;
+    font-family: 'Roboto', serif;
 }
 
 button#convert-button:hover {
@@ -366,11 +395,9 @@ section:nth-child(3) {
     background-color: #2c3531;
     color: white;
     background-image: url("/images/bike-section.png");
-    background-position: center left -30px;
+    background-size: 100%;
+    background-position: center left;
     background-attachment: fixed;
-
-
-
 }
 
 table {
@@ -378,7 +405,6 @@ table {
     margin: auto;
     width: 60%;
     color: #2c3531;
-
 }
 
 table th {
@@ -387,7 +413,6 @@ table th {
 }
 
 table tr {
-
     height: 30px;
     border: none;
 }
@@ -400,139 +425,47 @@ table tr:hover {
 
 @media only screen and (max-width: 800px) {
 
-/*    Sign-in section*/
-    label#signin-label, #password-label {
-        font-size: 1.2rem;
-        width: 50%;
-        margin: auto;
+/*Nav*/
+    a#main-logo {
+        font-size: 1.2em;
+    }
+
+    div#nav-links {
+        font-size: 0.9em;
+    }
+
+    button#js-signin-link, #js-signout-link {
+        width: 70px;
+        font-size: 0.7em;
+    }
+
+/*sign-in Section*/
+    section#sign-in-section {
+        font-size: 0.9em;
     }
 
     input#username, #password {
         width: 30%;
-        padding-left: 10px;
-        border: none;
-        border-radius: 10px
-    }
-
-    /*Purpose section*/
-
-    div#site-description {
-        width: 45%;
-        margin: 0 auto 50px auto;
-        display: inline-block;
-
-    }
-
-    p#about-one {
-        margin: 0 auto;
-        max-width: 650px;
-        font-size: 1.5em;
-        text-align: left;
-        padding-left: 50px;
-    }
-
-    div#site-infographic {
-        width: 60%;
-        margin: auto;
-
-    }
-
-    img#infographic {
-        width: 100%;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        margin: auto;
-    }
-
-    div#how-it-works{
-        margin-top: 100px;
-        width: 30%;
-        display: inline-block;
-        font-size: 1.5em;
-        text-align: left;
-    }
-
-    div#submit-screen {
-        display:inline-block;
-        width: 60%;
-    }
-
-    div#submit-screen img {
-        width: 80%;
-        margin: 40px;
-    }
-
-/*    Sign in section*/
-    section#sign-up {
-        min-height: 200px;
-        padding: 30px 0;
-        background-color: #ffce00;
-        color: #2c3531;
-        font-size: 1.0em;
-        line-height: 1.5em;
-    }
-}
-
-
-@media only screen and (max-width: 640px) {
-
-}
-
-
-@media only screen and (max-width: 480px) {
-
-    /*Lots of Nav stuff*/
-    nav, footer {
-        padding: 1.5% 0;
-        background-color: #262228;
-        color: white;
-        font-family: 'Roboto', sans-serif;
-    }
-
-    ul {
-        display: block;
-    }
-
-    /*///////////Sign-in section/////////////*/
-   section#sign-in-section{
-        min-height: 100px;
-        padding: 30px 0;
-    }
-
-
-    header#sign-in-header {
-        padding-top: 6%;
-        padding-bottom: 2%;
-    }
-
-    form#signin-form {
-        margin: auto;
-        width: 70%;
-    }
-
-    input#username, #password {
-        width: 60%;
-        padding-left: 10px;
-        border: none;
-        border-radius: 10px
+        font-size: 0.9em;
     }
 
     button#js-signin-button {
-        color: #262228;
-        letter-spacing: 1px;
-        background-color: #ffce00;
-        width: 90px;
-        padding: 5px;
-        border-radius: 10px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-
+        width: 70px;
+        font-size: 0.9em;
     }
 
-    button#js-signin-button:hover {
-        background-color: #ffe066;
+    section#miles-total div div.card-name {
+        font-size: 1.2em;
+        line-height: 1em;
+        text-align: center;
+    }
+
+    h3#green-car {
+        margin-bottom: 1rem;
     }
 
 }
+
 
 
 
