--- a/public/style.css
+++ b/public/style.css
@@ -32,13 +32,13 @@ main.wrapper {
 }
 
 section {
-    height: 100%;
+    min-height: 300px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
 
 header {
-    padding: 1% 0;
+    padding: 2% 0;
     font-family: 'Roboto Slab', serif;
     text-align: center;
 }
@@ -167,13 +167,14 @@ button#js-signin-button:hover {
 /*Main and purpose section*/
 
 section#main-header {
-    padding: 5% 0 0 0;
+    padding: 35% 0 0 0;
     background-image: url("/images/co2mmuteSectionImg.jpg");
-    background-size: 150%;
-    background-position: center top 200px;
+    background-size: 155%;
+    background-position: center top 150px;
     background-repeat: no-repeat;
     background-color: #0375B4;
     background-attachment: fixed;
+    vertical-align: top;
 }
 
 header#page-title {
@@ -196,7 +197,7 @@ section#purpose-statement {
 }
 
 
-h1#purpose-header{
+h2#purpose-header{
     width: 15%;
     color: #262228;
     display: inline-block;
@@ -464,8 +465,8 @@ table tr:hover {
     }
 
 /*purpose section*/
-    h1#purpose-header{
-        width: 15%;
+    h2#purpose-header{
+        width: 20%;
         font-size: 1.5em;
         vertical-align: top;
     }
@@ -533,10 +534,6 @@ table tr:hover {
 }
 
 @media only screen and (max-width: 640px) {
-
-    header {
-        font-size: 1em;
-    }
 
     /*Nav*/
 
@@ -644,11 +641,6 @@ table tr:hover {
 }
 
 @media only screen and (max-width: 480px) {
-
-    header {
-        font-size: 1em;
-    }
-
     /*Nav*/
 
     nav {
@@ -686,6 +678,12 @@ table tr:hover {
         font-size: 0.8em;
     }
 
+    label#signin-label, #password-label {
+        width: 80%;
+        display: block;
+        margin: auto;
+    }
+
     input#username, #password {
         width: 80%;
         font-size: 0.9em;
@@ -699,7 +697,7 @@ table tr:hover {
     }
 
     /*purpose section*/
-    h1#purpose-header{
+    h2#purpose-header{
         width: 90%;
         font-size: 1.2em;
         display: block;
